Fix page overflow

--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ body {
   color: var(--text-black);
 }
 
-body {
+/* body {
   overflow: hidden;
-}
+} */
 
 section,
 h1,
@@ -76,12 +76,28 @@ svg {
 .page {
   z-index: 99999;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
 .page-wrapper {
   position: relative;
+}
+
+/* ---------------- Preloader ---------------- */
+
+.animated {
+  display: inline-block;
+  transform: translateY(100%);
+}
+
+.intro-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 16px;
+  font-weight: 500;
+  transform: translate(-50%, -50%);
 }
 
 /* ---------------- Toggle bar ---------------- */
